<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/packageNStuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Package"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Package"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:selectAllOnFocus="true"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/Ounces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Ounces"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/Cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/packageNStuff"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textBaseCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="false"
            android:background="@color/colorAccent"
            android:text="@string/BaseCost"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textAddedCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textBaseCost"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:text="@string/AddedCost"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textTotalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textAddedCost"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:text="@string/TotalCost"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/BaseCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textBaseCost"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimary"
            android:text="@string/BaseNum"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/AddedCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textAddedCost"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimary"
            android:text="@string/AddedNum"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TotalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textTotalCost"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimary"
            android:text="@string/TotalNum"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>